modified some code to receive the data from the wallet using another account