@@ -9,16 +9,18 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @SpringBootTest
-@RunWith(SpringRunner.class)
+@RunWith(MockitoJUnitRunner.class)
 public class ClaimGenServiceTest {
 
     @InjectMocks
@@ -29,7 +31,7 @@ public class ClaimGenServiceTest {
 
     @Before
     public void init(){
-        when(mockRepository.findAll()).thenReturn(List.of(mockClaim()));
+        when(mockRepository.findAll()).thenReturn(Arrays.asList(mockClaim()));
         when(mockRepository.save(any(Claim.class))).thenReturn(mockClaim());
     }
 
